<resources>
    <string name="app_name">ZA\'R\'AZ</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="log_in_to_your_account">Kayıtlı hesap ile giriş yapın!</string>
    <string name="email">EMAIL</string>
    <string name="password">ŞİFRE</string>
    <string name="log_in">GİRİŞ</string>
    <string name="need_an_account">YENİ HESAP OLUŞTURUN</string>
    <string name="register">KAYIT OL</string>
    <string name="personal_details">KİŞİSEL DETAYLAR</string>
    <string name="surname">SOYİSİM</string>
    <string name="name">İSİM</string>
    <string name="create_account">HESAP OLUŞTURUN</string>
    <string name="product_price">%.2f TL</string>
    <string name="special_prices">Özel Fiyatlar</string>
    <string name="all_products">Tüm Ürünler</string>
    <string name="title">Baslik</string>
    <string name="price">Fiyat</string>
    <string name="description">Aciklama</string>
    <string name="discount_price">İndirimli Fiyat</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="category">Kategori = %s</string>
    <string name="remove_all">Tümünü Sil</string>
    <string name="my_cart">Sepetim</string>
    <string name="cart_price">Ücret</string>
    <string name="cart_title">Başlık</string>
    <string name="cart_discount_price">DiscoundPrice</string>
    <string name="total">TOPLAM</string>
    <string name="forward">DEVAM ET</string>
    <string name="cart_no">KART NUMARASI</string>
    <string name="expiration_date">SON KULLANMA TARİHİ</string>
    <string name="cart_name">KART HAMİLİ</string>
    <string name="cvv_no">CVV GÜVENLİK KODU</string>
    <string name="address">ADRES</string>
    <string name="card_number_message">Lütfen geçerli bir kart numarası giriniz!</string>
    <string name="card_date_message">Lütfen geçerli bir son kullanma tarihi giriniz!</string>
    <string name="card_name_message">Lütfen geçerli bir isim giriniz!</string>
    <string name="email_address">Lütfen geçerli bir mail adresi giriniz</string>
    <string name="password_message">Lütfen en az 6 haneli şifrenizi girin.</string>
    <string name="try_again">Lütfen tekrar deneyiniz.</string>
    <string name="order_received">SİPARİŞİNİZ ALINDI</string>
    <string name="go_home">ANA SAYFAYA GİT</string>
    <string name="my_favorites">Favorilerim</string>
    <string name="caution">Uyarı</string>
    <string name="exit_account_message">Hesabinizdan cikis yapmak istediginize emin misiniz</string>
    <string name="yes">Evet</string>
    <string name="no">Hayir</string>
</resources>